--- a/client/app/src/main/res/layout/fragment_account.xml
+++ b/client/app/src/main/res/layout/fragment_account.xml
@@ -5,10 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".fragments.main.ActiveFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <com.zx.app.common.widget.GalleryView
-        android:id="@+id/galleryView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+    <com.zx.app.common.widget.PortraitView
+        android:id="@+id/pv_portrait"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/default_portrait" />
 </FrameLayout>
