客户端联系人列表

--- a/client/app/src/main/res/layout/fragment_search_user.xml
+++ b/client/app/src/main/res/layout/fragment_search_user.xml
@@ -3,23 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.main.ContactFragment">
+    tools:context=".fragments.search.SearchUserFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/white"
         android:clipToPadding="false"
-        android:elevation="@dimen/len_1"
-        android:outlineProvider="bounds"
-        android:paddingBottom="@dimen/len_12"
-        android:paddingTop="@dimen/len_12"
+        android:padding="2dp"
         android:visibility="gone" />
 
     <com.zx.app.common.widget.EmptyView
         android:id="@+id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-
 </FrameLayout>
